<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    android:background="@drawable/linear_layout_background"
    android:layout_margin="4dp"
    android:padding="4dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:textSize="24dp"
        android:textStyle="bold"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:background="@drawable/linear_layout_background"
        android:id="@+id/settingsGoalLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit your goal here"
            android:textSize="14sp"
            android:textStyle="italic"
            />

        <TextView
            android:id="@+id/reduceUsageQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smartphone_usage_goal"
            android:textSize="16sp"
            android:layout_marginTop="2dp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/settingsReduceUsageSlider"
            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="10"
            android:valueTo="50"
            android:stepSize="5"
            app:labelBehavior="visible"
            android:layout_marginTop="2dp"
            app:thumbTint="@color/blue_500"
            app:trackColor="@color/blue_200"
            app:trackColorActive="@color/blue_500" />

        <TextView
            android:id="@+id/settingsReduceUsageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usage_limit_text"
            android:layout_gravity="start"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_margin="2dp"
        android:background="@drawable/linear_layout_background">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Insert passkey:"
            android:id="@+id/passkeyText"
            />

        <EditText
            android:id="@+id/passkeyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter to access settings"
            android:inputType="numberPassword"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:padding="8dp"
            android:background="@android:drawable/edit_text"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsHiddenLayout"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_margin="2dp"
            android:background="@drawable/linear_layout_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_deviceid_text"
                android:id="@+id/settingsDeviceId"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_margin="4dp"
            android:background="@drawable/linear_layout_background">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startOnBoardingButton"
                android:text="Onboarding"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SPAI"
                android:text="SPAI"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SAS_SV"
                android:text="SAS-SV"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_margin="4dp"
            android:background="@drawable/linear_layout_background">

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set current study state:" android:textSize="16sp"
            android:paddingTop="16dp"
            android:gravity="start"/>


            <Spinner
            android:id="@+id/study_state_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_margin="4dp"
            android:background="@drawable/linear_layout_background">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settingsTestDialogBed"
                android:text="Test Dialog (bed)"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settingsTestDialogGoal"
                android:text="Test Dialog (goal)"/>

        </LinearLayout>
    </LinearLayout>

    </LinearLayout>